--- a/sec21sellUrStuff/views/users/edit.mustache
+++ b/sec21sellUrStuff/views/users/edit.mustache
@@ -7,31 +7,32 @@
     <title>Sell Your Stuff</title>
   </head>
   <body>
-    <h1>Add Product</h1>
+    <h1>Edit Product</h1>
     
 <div class = "container">
 {{> menu}} 
          
-  <form action = '/users/upload' method="POST" enctype = "multipart/form-data">
+  <form action = '/users/upload/edit/{{id}}' method="POST" enctype = "multipart/form-data">
     <label>Photo</label>
     <input type="file" name="photo" />
     <button type="submit"> Upload </button>
   </form>
      
-  <img src="{{imageURL}}" class={{className}}/>
+  <img src="/uploads/{{imageURL}}" class={{className}}/>
          
-  <form action='/users/add-product' method="POST">
+  <form action='/users/update-product' method="POST">
+  <input type = "hidden" name="productId" value={{id}} />
     <div class="form-group">
     <label>Title</label>
-    <input type="text" name = "title" class="form-control"  placeholder = "Enter title">
+    <input type="text" name = "title" value={{title}} class="form-control"  placeholder = "Enter title">
     </div>
   <div class="form-group">
     <label>Description</label>
-    <textarea class="form-control" name="description"></textarea>
+    <textarea class="form-control" name="description">{{description}}</textarea>
   </div>
   <div class="form-group">
     <label>Price</label>
-    <input type="text" name="price" />
+    <input type="text" name="price" value = {{price}}/>
   </div>
   
   <button type="submit" class="btn btn-primary">Save </button>
